# gpt2notion

./: README.md  gpt2notion.py  pyproject.toml  setup_callables.py  setup_notion.py  template.env
database_dumps/: Tasks.json
testing/: testing_notion.py
testing_chatgpt/: template.env  testing.py
