[tool.poetry]
name = "gpt2notion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.10.0"
requests = "^2.31.0"
ipykernel = "^6.29.0"
httpx = "^0.26.0"
flask = "^3.0.1"
notion-client = "^2.2.1"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
waitress = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
